[gd_scene load_steps=3 format=3 uid="uid://tx02kkjwv1cw"]

[ext_resource type="Script" path="res://script/viewport.gd" id="1_vbgrw"]

[sub_resource type="Environment" id="Environment_ixqlb"]

[node name="viewport" type="SubViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
script = ExtResource( "1_vbgrw" )

[node name="subViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1024, 600)
render_target_update_mode = 4

[node name="pivot_y" type="Node3D" parent="subViewport"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="pivot_x" type="Node3D" parent="subViewport/pivot_y"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="camera" type="Camera3D" parent="subViewport/pivot_y/pivot_x"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
environment = SubResource( "Environment_ixqlb" )
